--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.11.8",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
   },
